@@ -4,6 +4,7 @@ Release history for Text::FormBuilder.
     * added support for fields with 'other' (requires FB 3.02)
     * added support for limited growth 'growable' fields
     * allow end of field line comments
+    * addded an external_css option to include external stylesheets
     
 0.09 - 10 Mar 2005
     * single-line textfields can be given a maxlength
